--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -10,24 +10,25 @@
         <p> <%= link_to "Diagnostic technique Structure", new_trash_diagnostic_path, class:"btn btn-primary bold" %></p>
       <% end %>
 
+      <% if current_user.referent? && current_user.company.company_behaviours.empty? %>
+        <%= link_to "Diagnostic comportemental Structure", new_company_behaviour_diag_path, class:"btn btn-primary bold" %>
+      <% elsif current_user.referent? && Date.today < "15/02/2019".to_date %>
+        <%= link_to "Diagnostic comportemental Structure", company_behaviour_diag_path(:step_one), class:"btn btn-primary bold" %>
+      <% end %>
+
       <% if !current_user.company.trash_diagnostic.nil? %>
         <% if current_user.user_behaviour_diag.nil? %>
-          <%= link_to "Faire mon formulaire comportemental", new_comportamental_formulaire_path, class:"btn btn-primary bold" %>
-        <% else %>
-          <%= link_to "Formulaire comportemental", comportamental_formulaire_path(:page_one), class:"btn btn-primary bold" %>
+          <%= link_to "Diagnostic comportemental Collaborateur·rice", new_comportamental_formulaire_path, class:"btn btn-primary bold" %>
+        <% elsif Date.today < "15/02/2019".to_date %>
+          <%= link_to "Diagnostic comportemental Collaborateur·rice", comportamental_formulaire_path(:page_one), class:"btn btn-primary bold" %>
         <% end %>
 
-        <% if current_user.user_behaviour_result.nil? %>
-          <%= link_to "Réaliser le formulaire - bilan comportemental", new_result_comportamental_formulaire_path, class:"btn btn-primary bold" %>
-        <% else %>
-          <%= link_to "Voir le formulaire - Bilan comportemental", result_comportamental_formulaire_path(:start), class:"btn btn-primary bold" %>
+        <% if current_user.user_behaviour_result.nil? && Date.today > current_user.company.project.bilan_start_at %>
+          <%= link_to "Bilan comportemental Collaborateur·rice", new_result_comportamental_formulaire_path, class:"btn btn-primary bold" %>
+        <% elsif Date.today > current_user.company.project.bilan_start_at %>
+          <%= link_to "Bilan comportemental Collaborateur·rice", result_comportamental_formulaire_path(:start), class:"btn btn-primary bold" %>
         <% end %>
 
-        <% if current_user.company.company_behaviours.empty? %>
-          <%= link_to "Faire mon diagnostic comportemental de la structure", new_company_behaviour_diag_path, class:"btn btn-primary bold" %>
-        <% else %>
-          <%= link_to "Voir mon diagnostic comportemental de la structure", company_behaviour_diag_path(:step_one), class:"btn btn-primary bold" %>
-        <% end %>
 
         <h2 class="green-bg mt-5">Déchets de fonctionnement de votre structure</h2>
         <% if current_user.referent? %>
