--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -75,6 +75,8 @@
         <% if !current_user.collects.empty? %>
           <div id="values"></div>
         <% end %>
+        <%=  (@residual_trash / @total_weight_per_company * 100).round %>%
+        <p>d'ordures ménagères résiduelles sur la production totale de déchets de fonctionnement</p>
       <% end %>
     </div>
   </div>
