change style to charts#index and collects#index

--- a/app/stylesheets/components/_array.scss
+++ b/app/stylesheets/components/_array.scss
@@ -23,8 +23,8 @@ table {
   margin: auto;
 }
 
-table.user-array tr {
-  padding: 50px;
+table.user-array {
+  width: 100%;
 }
 
 @media screen and (max-width:461px) {
