--- a/app/views/charts/_show.html.erb
+++ b/app/views/charts/_show.html.erb
@@ -1,6 +1,6 @@
 <h4 class="text-center bold"><%= company.name.upcase %></h4>
 <div id='companychart' data-series="<%= series.to_json %>"></div>
-<p>Récapitulatif</p>
+<h2 class="green-bg my-4">Récapitulatif</h2>
 
 <table class="mt-4">
   <thead>
