--- a/app/views/charts/_show.html.erb
+++ b/app/views/charts/_show.html.erb
@@ -1,28 +1,29 @@
 <h4 class="text-center bold"><%= company.name.upcase %></h4>
 <div id='companychart' data-series="<%= series.to_json %>"></div>
 <h2 class="green-bg my-4">Récapitulatif</h2>
-
-<table class="mt-4">
-  <thead>
-    <tr class="text-center">
-      <th> Type de déchet</th>
-      <th> Kg/collaborateur/jour</th>
-      <th> Jours suivis </th>
-      <th> Poids total </th>
-    </tr>
-  </thead>
-  <% @days_and_weight_per_type_per_person.each do |type|  %>
+<div class="structur-array">
+  <table class="mt-4">
+    <thead>
+      <tr class="text-center">
+        <th> Type de déchet</th>
+        <th> Kg/collaborateur/jour</th>
+        <th> Jours suivis </th>
+        <th> Poids total </th>
+      </tr>
+    </thead>
+    <% @days_and_weight_per_type_per_person.each do |type|  %>
+      <tbody>
+        <td><%= type[0] %></td>
+        <td><%= (type[2] / type[1]).round %></td>
+        <td><%= type[1].to_i  %></td>
+        <td><%= type[2].round %> Kg</td>
+      </tbody>
+    <% end %>
     <tbody>
-      <td><%= type[0] %></td>
-      <td><%= (type[2] / type[1]).round %></td>
-      <td><%= type[1].to_i  %></td>
-      <td><%= type[2].round %> Kg</td>
+      <td>Total</td>
+      <td>-</td>
+      <td>-</td>
+      <td><%= @total_weight_per_company.round %> Kg</td>
     </tbody>
-  <% end %>
-  <tbody>
-    <td>Total</td>
-    <td>-</td>
-    <td>-</td>
-    <td><%= @total_weight_per_company.round %> Kg</td>
-  </tbody>
-</table>
+  </table>
+</div>
