--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -28,31 +28,32 @@
           <div id='adminchart' data-series="<%= @admin_series.to_json %>"></div>
           <!-- solution de secours à la place des totaux dans le graphique -->
           <h2 class="green-bg my-4">Récapitulatif</h2>
-
-          <table class="mt-4">
-            <thead>
-              <tr class="text-center">
-                <th> Structure</th>
-                <th> Kg/collaborateur/jour</th>
-                <th> Jours suivis </th>
-                <th> Poids total </th>
-              </tr>
-            </thead>
-            <% @days_and_weight_per_company_per_person.each do |company|  %>
+          <div class="structur-array">
+            <table class="mt-4">
+              <thead>
+                <tr class="text-center">
+                  <th> Structure</th>
+                  <th> Kg/collaborateur/jour</th>
+                  <th> Jours suivis </th>
+                  <th> Poids total </th>
+                </tr>
+              </thead>
+              <% @days_and_weight_per_company_per_person.each do |company|  %>
+                <tbody>
+                  <td><%= company[0] %></td>
+                  <td><%= (company[2] / company[1]).round %></td>
+                  <td><%= company[1].to_i  %></td>
+                  <td><%= company[2].round %> Kg</td>
+                </tbody>
+              <% end %>
               <tbody>
-                <td><%= company[0] %></td>
-                <td><%= (company[2] / company[1]).round %></td>
-                <td><%= company[1].to_i  %></td>
-                <td><%= company[2].round %> Kg</td>
+                <td>Total</td>
+                <td>-</td>
+                <td>-</td>
+                <td><%= @total_weight.round %> Kg</td>
               </tbody>
-            <% end %>
-            <tbody>
-              <td>Total</td>
-              <td>-</td>
-              <td>-</td>
-              <td><%= @total_weight.round %> Kg</td>
-            </tbody>
-          </table>
+            </table>
+          </div>
 
           <hr class="my-5">
 
