--- a/app/views/shared/_navbar_connected.html.erb
+++ b/app/views/shared/_navbar_connected.html.erb
@@ -19,8 +19,26 @@
       <li class="nav-item m-3 bold-link">
         <%= link_to "TABLEAU DE BORD", "/tableau_de_bord", class:"nav-link text-light-gray" %>
       </li>
-      <li class="nav-item m-3 bold-link">
-        <%= link_to "DONNÉES", "/donnees", class:"nav-link text-light-gray" %>
+      <li class="nav-item m-3 dropdown bold-link">
+        <% if mobile_device == "mobile" %>
+          <a class="nav-link dropdown-toggle" href="/donnees" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            DONNÉES
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <%= link_to "diagnostic", donnees_path(anchor: "diagnostic"), class:"anchor dropdown-item text-primary"%>
+            <%= link_to "Déchets de fonctionnement de votre structure", donnees_path(anchor: "dechets"), class:"anchor dropdown-item text-primary"%>
+            <%= link_to "Référent·e et collaborateur·rice·s de votre structure", donnees_path(anchor: "referent"), class:"anchor dropdown-item text-primary"%>
+          </div>
+        <% else %>
+          <a class="nav-link dropdown-toggle" href="/donnees" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">
+            DONNÉES
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <%= link_to "diagnostic", donnees_path(anchor: "diagnostic"), class:"anchor dropdown-item text-primary"%>
+            <%= link_to "Déchets de fonctionnement de votre structure", donnees_path(anchor: "dechets"), class:"anchor dropdown-item text-primary"%>
+            <%= link_to "Référent·e et collaborateur·rice·s de votre structure", donnees_path(anchor: "referent"), class:"anchor dropdown-item text-primary"%>
+          </div>
+        <% end %>
       </li>
 
       <li class="nav-item m-3 bold-link">
