--- a/app/views/bins/new.html.erb
+++ b/app/views/bins/new.html.erb
@@ -15,6 +15,7 @@
         <thead>
           <tr>
             <th> Type de bacs</th>
+            <th> N° du bac</th>
             <th>Partagé</th>
             <th> Volume (Litres)</th>
             <th> Fréquence de collecte habituelle</th>
@@ -28,6 +29,7 @@
         <% @bins.each do |bin| %>
         <tbody>
           <td><%= bin.bin_type.name  %></td>
+          <td><%= bin.bin_type.id %></td>
           <td><%= bin.shared ? "Oui" : "Non" %></td>
           <td><%= bin.volume %>L</td>
           <td><%= bin.frequency_number %> <%= bin.frequency_periodicity %> <%= bin.frequency_day %> </td>
