--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -66,7 +66,7 @@
                   <td> <%= collect.bin.company.name %></td>
                 <% end %>
                 <td><%= collect.bin.bin_type.name %></td>
-                <td><%= collect.bin.id %></td>
+                <td><%= collect.bin.bin_type.id %></td>
                 <td><%= collect.start_at.strftime("%d/%m/%y") %></td>
                 <td><%= collect.end_at.strftime("%d/%m/%y") %></td>
                 <td><%= collect.filled_rate %>%</td>
